--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@imbios/next-pwa": "^1.1.1",
     "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "8.5.1",
     "next": "13.4.2",
     "next-offline": "^5.0.5",
     "next-pwa": "^5.6.0",
