--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "next": "13.4.2",
     "next-offline": "^5.0.5",
     "next-pwa": "^5.6.0",
+    "next-service-worker": "^1.0.0",
+    "next-with-workbox": "^3.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swiper": "^9.3.2",
