--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@hookform/resolvers": "^3.3.2",
     "@imbios/next-pwa": "^1.1.1",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
@@ -22,8 +22,10 @@
     "next-with-workbox": "^3.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "swiper": "^9.3.2",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
